# simulation-project-template

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pr_description.md  pre-commit-config.yaml  pyproject.toml  requirements.txt  run_docker.sh  run_snakemake.sh  workflow.yaml  workflow_example.yaml
.github/workflows/: auto_tag.yml  build_dist.yml  tests.yml  version_check.yml
configs/experiment-1/: config.csv  config.py
docs/: architecture.md  cli-workflow.md  hpc-workflow.md  snakemake-workflow.md  versioning.md
docs/templates/new_stage/: Snakefile.additions.py  workflow.yaml.additions
docs/templates/new_stage/rules/: simulate_bar.smk
docs/templates/new_stage/scripts/: simulate_bar.py
docs/templates/new_stage/sweeps/: sweep.py
docs/templates/new_step/: Snakefile.additions.py  workflow.yaml.additions
docs/templates/new_step/rules/: compute_foo.smk
docs/templates/new_step/scripts/: compute_foo.py
hpc/: config_example.yaml  lifecycle.py  submit_example.yaml
hpc/containers/: build_docker.sh  build_sif.py
hpc/setup/: requirements.txt  setup.sh
hpc/snakemake/: run_snakemake.sh
src/simulation_project_template/: __init__.py  cli.py
src/snakemake_template/: __init__.py  utils.py
sweeps/simulation/e0/: summary.csv  sweep.py
tests/: test_cli.py  test_init.py  test_utils.py
workflow/: Snakefile  config.yml
workflow/profiles/slurm/: slurm_config.yml
workflow/rules/: aggregate.smk  main.smk  simulate.smk
workflow/scripts/: aggregate.py  main_compute_mean.py  main_generate_numbers.py  simulate.py
workflow/tools/: config_generator.py  job_utils.py  sweeper.py
