[project]
name = "snakemake-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.4",
    "pandas>=2.3.3",
]

[project.scripts]
snakemake-template = "snakemake_template:main"

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "snakemake>=9.13.4",
]
