[project]
name = "simulation-project-template"
description = "A template for reproducible simulation projects in Python."
version = "0.3.0"
authors = [{ name = "Julien Drapeau", email = "juliendrapeau707@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["click>=8.0", "numpy>=2.3.4", "pandas>=2.3.3"]

[project.scripts]
spt = "simulation_project_template.cli:main"

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
  "importlib-metadata>=9.0.0",
  "matplotlib>=3.10.8",
  "pytest>=9.0.2",
  "pytest-cov>=7.0.0",
  "pytest-timeout>=2.4.0",
  "pytest-xdist>=3.8.0",
  "pyyaml>=6.0",
  "ruff>=0.15.5",
  "seaborn>=0.13.2",
  "snakemake>=9.13.4",
  "tqdm>=4.0",
  "ty>=0.0.34",
]

[tool.ty.rules]
unresolved-import = "ignore"

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing --cov-report=html"
